# nano-decoder-only-transformer

./: CLAUDE.md  Cargo.toml  train_config.txt
data/: LICENSE  aru_aho.txt  aru_otoko.txt  botchan.txt  cello.txt  chuumon.txt  doke_no_hana.txt  futatsu_no_michi.txt  ginga.txt  haguruma.txt  hana.txt  hashire_merosu.txt  jashumon.txt  jigokuhen.txt  juami.txt  kappa.txt  kokoro.txt  kumo_no_ito.txt  lemon.txt  maihime.txt  ningen_shikkaku.txt  porano.txt  rashomon.txt  riryo.txt  roman_toro.txt  sangetsuki.txt  shayo.txt  shuju_no_kotoba.txt  shumi_no_iden.txt  takasebune.txt  torokko.txt  toshishun.txt  wagahai.txt  wiki_0000_アンパサンド.txt  wiki_0001_言語.txt  wiki_0002_日本語.txt  wiki_0003_地理学.txt  wiki_0004_パリ.txt  wiki_0005_ヨーロッパ.txt  wiki_0006_生物.txt  (+80 more)
docs/: 001_tensor_basics.md  002_linear.md  003_activation.md  004_softmax.md  005_layer_norm.md  006_embedding.md  007_positional_encoding.md  008_attention.md  009_multi_head_attention.md  010_feed_forward.md  011_transformer_block.md  012_transformer.md  013_tokenizer.md  014_generate.md  015_cross_entropy_loss.md  016_backprop_foundation.md  017_linear_backward.md  018_activation_backward.md  019_softmax_backward.md  020_layer_norm_backward.md  021_embedding_backward.md  022_attention_backward.md  023_multi_head_attention_backward.md  024_feed_forward_backward.md  025_transformer_block_backward.md  026_transformer_backward.md  027_optimizer.md  028_training_loop.md  029_gradient_clipping.md  030_lr_schedule.md  031_dropout.md  032_japanese_training_demo.md  033_matrixmultiply.md  034_rayon_parallelism.md  039_save_load.md  (+4 more)
(+22 files in other folders)
